compiler/testData/diagnostics/tests/script/innerClassWarning.fir.kts
// TARGET_BACKEND: JVM_IR
// !LANGUAGE: -ProhibitScriptTopLevelInnerClasses

<!INNER_ON_TOP_LEVEL_SCRIPT_CLASS_WARNING!>inner<!> class A
